--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -49,8 +49,8 @@ jobs:
 
       - name: Commit formatting changes
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git config user.name "Tw93"
+          git config user.email "tw93@qq.com"
           if [[ -n $(git status --porcelain) ]]; then
             git add .
             git commit -m "chore: auto format code"
